--- a/02-lesson/css/style.css
+++ b/02-lesson/css/style.css
@@ -1,7 +1,28 @@
+* {
+  font-family: monospace;
+}
+
 body {
   font-size: 22px;
 }
 
+h1, h2 {
+  color: blue;
+}
+
 p {
   color: blueviolet;
+}
+
+.highlight {
+  text-transform: uppercase;
+  background-color: gold;
+}
+
+.gray {
+  color: gray;
+}
+
+#second {
+  font-style: italic;
 }
