--- a/06-lesson/css/styles.css
+++ b/06-lesson/css/styles.css
@@ -9,8 +9,8 @@ body {
   padding: 10%;
   font-size: 2rem;
   /* color: darkgrey */
-  /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
-  font-family: 'Roboto', sans-serif;
+  font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+  /*   font-family: 'Roboto', sans-serif; */
 
 }
 
@@ -25,5 +25,5 @@ p {
 /*   letter-spacing: 0.1em; */
 /*   word-spacing: 0.2em; */
 font-weight: 500;
-font-style: italic;
+/* font-style: italic; */
 }
