Con't to work with CSS links

--- a/07-lesson/css/styles.css
+++ b/07-lesson/css/styles.css
@@ -11,4 +11,18 @@ p {
 a {
   font-style: normal;
   text-decoration: none;
+  color: blue;
+}
+
+a:visited {
+  color: darkgoldenrod;
+}
+
+a:hover, a:focus {
+  text-decoration: underline;
+  color: darkblue;
+}
+
+a:active {
+  color: red;
 }
