--- a/12-lesson/css/styles.css
+++ b/12-lesson/css/styles.css
@@ -6,4 +6,41 @@
 
 body {
   font-family: /* Cambria,  */Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.5rem;
+}
+
+.columns {
+  margin-top: 2rem;
+  columns: 4 250px;
+  column-rule: 3px solid #333;
+  column-gap: 3rem;
+}
+
+.columns p {
+  margin-bottom: 1.5rem;
+}
+
+.columns h2 {
+  margin: 0 0 1rem;
+  background-color: #333;
+  color: #fff;
+  padding: 1rem;
+  break-inside: avoid;
+  break-before: column;
+}
+
+.quote {
+  margin-top: 2rem;
+  font-size: 3rem;
+  text-align: center;
+  color: #333;
+  column-span: all;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.bottom-graph {
+  margin-top: 1.5rem;
 }
