--- a/13-lesson/css/styles.css
+++ b/13-lesson/css/styles.css
@@ -7,4 +7,12 @@
 body {
   font-family: /* Cambria,  */Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 1.5rem;
+  min-height: 200vh;
+}
+
+.outer-container {
+  border: 3px dashed #000;
+  width: 75vw;
+  height: 85vh;
+  margin: 40px auto;
 }
