--- a/15-lesson/css/styles.css
+++ b/15-lesson/css/styles.css
@@ -8,6 +8,35 @@ body {
   font-family: /* Cambria,  */Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 2rem;
   min-height: 100vh;
+
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-auto-rows: 75px auto 75px;
+  grid-template-areas: 
+    "hd hd hd hd hd hd hd hd hd"
+    "mn mn mn mn mn mn mn sb sb"
+    "ft ft ft ft ft ft ft ft ft";
+  gap: 2rem 0.5rem;
+}
+
+.el {
+  background-color: rebeccapurple;
+  color: white;
+  display: grid;
+  place-content: center;
+}
+
+.header {
+  grid-area: hd;
+}
+
+.sidebar {
+  grid-area: sb;
+  background-color: blue;
+}
+
+.footer {
+  grid-area: ft;
 }
 
 header h1, main {
@@ -20,6 +49,7 @@ header h1, main {
   grid-template-columns: repeat(2, 1fr 2fr);
   grid-auto-rows: minmax(150px, auto);
   gap: 1rem;
+  grid-area: mn;
 }
 
 .box {
@@ -36,4 +66,13 @@ header h1, main {
   background-color: blue;
   grid-column: 1 / 4;
   grid-row: 1 / 3;
+
+  display: grid;
+  place-content: center;
+}
+
+.box:nth-child(2) {
+  background-color: purple;
+  grid-column: 1 / 5;
+  grid-row: 3 / 4;
 }
