--- a/16-lesson/css/styles.css
+++ b/16-lesson/css/styles.css
@@ -1,10 +1,94 @@
+/* Open Sans and Aklakami Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Alkalami&family=Open+Sans&display=swap');
+
+/* Begin Reset */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+img { display: block; }
+/* End Reset */
+
+/* Utility Classes */
+.nowrap {
+  white-space: nowrap;
+}
+
+.offscreen {
+  position: absolute;
+  left: -10000px;
+}
+
+/* End Utility Classes */
+
 body {
-  font-family: /* Cambria,  */Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Nunito, serif;
   font-size: 2rem;
+}
+
+header h1 {
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  border-bottom: 1px dashed white;
+
+}
+
+figcaption {
+  font-size: 1rem;
+  text-align: center;
+  padding: 0.5em
+}
+
+.container {
+  background-color: rgb(252, 210, 156);
+  background-image: url(../img/map-2176x1451.png);
+  background-repeat: repeat;
+  background-size: cover;
+}
+
+.hero {
+  border-bottom: 2px solid black;
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+
+  background-color: hsla(0, 0%, 100%, 0.35);
+}
+
+.h1 {
+  font-size: 500%;
+  color: aliceblue;
+  text-shadow: 2px 2px 5px black;
+/*   background-color: hsla(0, 0%, 0%, 0.40);
+  border-radius: 15px;
+  padding: 0.25rem; */
+}
+
+.profile-pic-figure {
+  width: 35%;
+}
+
+.profile-pic-figure img {
+  width: 100%;
+  height: auto;
+  min-width: 100px;
+  border: 7px double hsla(0, 0%, 0%, 0.35);
+  border-radius: 50%;
+}
+
+.example {
+  margin: 1rem;
+  padding-left: 20px;
+  border: 1px solid red;
+}
+
+.example img {
+  width: 25%;
+  height: auto;
 }
