--- a/20-lesson/css/styles.css
+++ b/20-lesson/css/styles.css
@@ -21,8 +21,23 @@
   --LIGHT-COLOR: whitesmoke;
   --DARK-COLOR: #000;
 
+  /* SQUARE */
+  --SQUARE-BGCOLOR: papayawhip;
+  --SQAURE-SIZE: max(150px, 20vw);
+
   /* GENERAL */
   --PADDING: 0.5rem;
+  --SHADOWS: 0 6px 15px -5px var(--DARK-COLOR);
+  --BORDERS: 2px solid var(--DARK-COLOR);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --BGCOLOR: #000;
+    --ALT-BGCOLOR: #333;
+    --RADIAL-COLOR: rgb(217, 217, 217);
+    --SQUARE-BGCOLOR: rgb(202, 174, 202)
+  }
 }
 
 /* || GENERAL STYLES */
@@ -35,7 +50,7 @@ body {
   flex-direction: column;
 }
 
-header, nav, main, footer {
+header, nav, footer {
   display: grid;
   place-content: center;
   grid-template-columns: 100%;
@@ -56,15 +71,40 @@ nav {
   background-color: white;
   color: var(--DARK-COLOR);
   padding: var(--PADDING);
-  border-bottom: 2px solid var(--DARK-COLOR);
+  border-bottom: var(--BORDERS);
+  box-shadow: var(--SHADOWS);
 }
 
 main {
   flex-grow: 1;
+
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-flow: row wrap;
+  gap: min(4vw, 15px);
 }
 
 footer {
   bottom: 0;
+}
+
+/* || FEATURES */
+.square--highlight {
+  --SQUARE-BGCOLOR: cornflowerblue;
+}
+
+.square {
+  background-color: var(--SQUARE-BGCOLOR);
+  width: var(--SQAURE-SIZE);
+  height: var(--SQAURE-SIZE);
+  border: var(--BORDERS);
+  border-radius: 15px;
+  display: grid;
+  place-content: center;
+  font-size: var(--FS-XL);
+  box-shadow: var(--SHADOWS);
 }
 
 /* || SMALL  */
