--- a/23-lesson/css/styles.css
+++ b/23-lesson/css/styles.css
@@ -20,42 +20,49 @@ body {
   font-family: 'Nunito', sans-serif;
   min-height: 100vh;
   display: flex;
-}
+  flex-flow: column nowrap;
 
-header {
-  display: flex;
-  flex-flow: row nowrap;
-  gap: 2.25rem;
-  justify-content: center;
-  align-items: center;
+}
+button {
+  font-size: 2rem;
 }
 
 /* || BLOCKS */
 /* aka components */
 
-.btn {
+.header {
+  background-color: var(--HEADER-BGCOLOR);
+  color: var(--HEADER-COLOR);
+  padding: 1rem 1rem 0.5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+/* || ELEMENTS */
+/* No standalone meaning - semantically tied to the block */
+/* Does not represent structure, not header__nav__btn */
+
+.header__btn {
   width: 100px;
   height: 100px;
   border-radius: 15px;
-  border: 2px solid #000;
-  background-color: rgb(219, 218, 218);
-  display: inline;
 }
 
 /* || MODIFIERS */
 /* incremental style changes */
 
 /* Blocks with modifiers */
-.btn--secondary {
+.header__btn--secondary {
   background-color: yellow;
 }
 
-.btn--lean {
+.header__btn--lean {
   transform: skewX(-10deg);
 }
 
-.btn--border-lg {
-  border: 5px solid rgb(80, 66, 66);
+.header__btn--border-lg {
+  border: 5px solid whitesmoke;
 }
 
 
